# OpenGL-Snake_game

./: CMakeLists.txt  README.md  main_gyak1.cpp  main_gyak2.cpp  main_old.cpp
src/: Game.cpp  Game.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Snake.cpp  Snake.h  Wall.cpp  Wall.h  main.cpp
src/shaders/: fragment.glsl  vertex.glsl
